; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_bindctx.c_bsc_from_bctx.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_bindctx.c_bsc_from_bctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32* }

@IID_IBindStatusCallbackHolder = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @bsc_from_bctx(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_2__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32* @bsch_from_bctx(i32* %7)
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %39

12:                                               ; preds = %1
  %13 = load i32*, i32** %5, align 8
  %14 = bitcast %struct.TYPE_2__** %4 to i8**
  %15 = call i32 @IBindStatusCallback_QueryInterface(i32* %13, i32* @IID_IBindStatusCallbackHolder, i8** %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i64 @FAILED(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %12
  %20 = load i32*, i32** %5, align 8
  store i32* %20, i32** %2, align 8
  br label %39

21:                                               ; preds = %12
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %26, label %34

26:                                               ; preds = %21
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @IBindStatusCallback_Release(i32* %27)
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 1
  %31 = load i32*, i32** %30, align 8
  store i32* %31, i32** %5, align 8
  %32 = load i32*, i32** %5, align 8
  %33 = call i32 @IBindStatusCallback_AddRef(i32* %32)
  br label %34

34:                                               ; preds = %26, %21
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  %37 = call i32 @IBindStatusCallbackEx_Release(i32* %36)
  %38 = load i32*, i32** %5, align 8
  store i32* %38, i32** %2, align 8
  br label %39

39:                                               ; preds = %34, %19, %11
  %40 = load i32*, i32** %2, align 8
  ret i32* %40
}

declare dso_local i32* @bsch_from_bctx(i32*) #1

declare dso_local i32 @IBindStatusCallback_QueryInterface(i32*, i32*, i8**) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @IBindStatusCallback_Release(i32*) #1

declare dso_local i32 @IBindStatusCallback_AddRef(i32*) #1

declare dso_local i32 @IBindStatusCallbackEx_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
